# assignment_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/testbed_bringup/share/testbed_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/testbed_bringup/share/testbed_bringup/cmake/: testbed_bringupConfig-version.cmake  testbed_bringupConfig.cmake
install/testbed_bringup/share/testbed_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/testbed_bringup/share/testbed_bringup/launch/: testbed_full_bringup.launch.py
install/testbed_description/share/testbed_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/testbed_description/share/testbed_description/cmake/: testbed_descriptionConfig-version.cmake  testbed_descriptionConfig.cmake
install/testbed_description/share/testbed_description/environment/: ament_prefix_path.dsv  path.dsv
install/testbed_description/share/testbed_description/launch/: robot_description.launch.py  testbed_rviz_barebones.launch.py
install/testbed_description/share/testbed_description/meshes/: base_link.stl  caster_1.stl  caster_2.stl  caster_3.stl  caster_4.stl  dummy_link_1.stl  imu_link_1.stl  left_wheel_1.stl  lidar_link_1.stl  right_wheel_1.stl
install/testbed_description/share/testbed_description/rviz/: full_bringup.rviz  testbed_barebones.rviz  urdf_gazebo.rviz  urdf_vis_rviz
install/testbed_description/share/testbed_description/urdf/: materials.xacro  testbed.gazebo  testbed.trans  testbed.xacro
install/testbed_gazebo/share/testbed_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/testbed_gazebo/share/testbed_gazebo/cmake/: testbed_gazeboConfig-version.cmake  testbed_gazeboConfig.cmake
install/testbed_gazebo/share/testbed_gazebo/environment/: ament_prefix_path.dsv  path.dsv
install/testbed_gazebo/share/testbed_gazebo/launch/: spawn_playground.launch.py  spawn_testbed.launch.py
install/testbed_gazebo/share/testbed_gazebo/worlds/: testbed_empty.world  (+1 more)
install/testbed_navigation/share/testbed_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/l1-ros-internship-assignment-rahulrajak6942/testbed_bringup/maps/: testbed_world.yaml
src/testbed_navigation/: CMakeLists.txt  package.xml
src/testbed_navigation/config/: amcl_params.yaml  bt_navigator_params.yaml  controller_params.yaml  planner_params.yaml
src/testbed_navigation/launch/: localization.launch.py  map_loader.launch.py  navigation.launch.py  testbed_navigation.launch.py  view_map.launch.py
src/testbed_navigation/rviz/: map_view.rviz  nav2_default_view.rviz
(+43 files in other folders)
